files/main_style.css
 /* Header */

#header-wrap, #banner-wrap, #nav-wrap, #main-wrap, #footer-wrap, #total-wrapper { width:100%; min-width:960px; }
 #logo { text-align:center; }
 #header { border-collapse: collapse; border-spacing: 0; width:100%; float:left; height:40px; margin-top:5px; position:relative; z-index:4;}
 #header-right table { float: right; width: 1px; }
 .header-align-outer { display: table; #position: relative; overflow: hidden; height:355px; padding-bottom:15px; }
 .header-align-mid { #position: absolute; #top: 50%; display: table-cell; vertical-align: middle; }

/* Header Nav */

 #nav-wrap {position:absolute; top:0;}
 #nav-wrap .nav-container { float:right; position:relative; left:-50%; text-align:left; margin-top:30px; z-index:2; }
 #nav-wrap .nav-container ul{ list-style:none; position:relative; left:50%; z-index:2; }
 #nav-wrap .nav-container li{float:left;position:relative;}
 #nav-wrap .nav-container a{ text-decoration:none; font:bold 18px 'Josefin Sans', sans-serif; text-transform:uppercase; margin:10px 15px; float:left; color:#fff; padding:1px 2px; text-align:center; white-space:nowrap; }
 #nav-wrap .nav-container a:hover{border-bottom:1px dashed #fff; padding-bottom:0;}
 #nav-wrap .nav-container li#active a {border-bottom:1px solid #fff; padding-bottom:0;}
 #nav-wrap {overflow:hidden}

/* Header socials */

 .wsite-social-item { display:inline-block; width: 23px; height: 23px; margin: 0 0 0 3px; vertical-align: middle; background-image:url(theme/social-black.png?777251); -webkit-transition: background 0.5s ease-out; -moz-transition: background 0.5s ease-out; -o-transition: background 0.5s ease-out; transition: background 0.5s ease-out; }
 .wsite-social-facebook {background-position:0 0;}
 .wsite-social-facebook:hover {background-position:0 -23px;}
 .wsite-social-facebook:active {background-position:0 -46px;}
 .wsite-social-pinterest {background-position:-23px 0;}
 .wsite-social-pinterest:hover {background-position:-23px -23px;}
 .wsite-social-pinterest:active {background-position:-23px -46px;}
 .wsite-social-twitter {background-position:-46px 0;}
 .wsite-social-twitter:hover {background-position:-46px -23px;}
 .wsite-social-twitter:active {background-position:-46px -46px;}
 .wsite-social-linkedin {background-position:-69px 0;}
 .wsite-social-linkedin:hover {background-position:-69px -23px;}
 .wsite-social-linkedin:active {background-position:-69px -46px;}
 .wsite-social-mail {background-position:-92px 0;}
 .wsite-social-mail:hover {background-position:-92px -23px;}
 .wsite-social-mail:active {background-position:-92px -46px;}
 .wsite-social-rss {background-position:-115px 0;}
 .wsite-social-rss:hover {background-position:-115px -23px;}
 .wsite-social-rss:active {background-position:-115px -46px;}
 .wsite-social-flickr {background-position:-138px 0;}
 .wsite-social-flickr:hover {background-position:-138px -23px;}
 .wsite-social-flickr:active {background-position:-138px -46px;}
 .wsite-social-plus {background-position:-161px 0;}
 .wsite-social-plus:hover {background-position:-161px -23px;}
 .wsite-social-plus:active {background-position:-161px -46px;}
 .wsite-social-bitbucket {background-position:-184px 0;}
 .wsite-social-bitbucket:hover {background-position:-184px -23px;}
 .wsite-social-bitbucket:active {background-position:-184px -46px;}
 .wsite-social-yahoo {background-position:-207px 0;}
 .wsite-social-yahoo:hover {background-position:-207px -23px;}
 .wsite-social-yahoo:active {background-position:-207px -46px;}
 .wsite-social-youtube {background-position:-230px 0;}
 .wsite-social-youtube:hover {background-position:-230px -23px;}
 .wsite-social-youtube:active {background-position:-230px -46px;}
 .wsite-social { display:block; text-align:right; vertical-align: middle; margin-left:10px ; width:300px; }

/* Body */

 .container { margin: 0 auto; width: 960px; }
 #main-wrap .container { padding:50px 0; }
 #main-wrap { background:#fff; }


/* Unsorted so far */

 ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, body, html, div.paragraph, blockquote, fieldset, input { margin: 0; padding: 0; }
 ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, body, html, p, blockquote, fieldset, input { margin: 0; padding: 0; }
 body { font-family: 'Open Sans', Helvetica, sans-serif; background:#000; }
 #banner-wrap, #footer-wrap, #total-wrapper { background:#fff; }
 div.paragraph a, h2 a, .blog-comments-bottom a { color: #b24d40; border-bottom:1px solid #deb7b2; }
 p a, h2 a, .blog-comments-bottom a { color: #003300; border-bottom:1px solid #deb7b2; }
 div.paragraph a:hover, h2 a:hover, .blog-comments-bottom a:hover { color: #8e3226; border-bottom:1px solid #c18881; }
 p a:hover, h2 a:hover, .blog-comments-bottom a:hover { color: #8e3226; border-bottom:1px solid #c18881; }
 h2 { font-size:17px ; padding: .5em 0 0.8em 0; letter-spacing:1px; line-height: 1.2; font-weight:600; color: #373737; }
 h2 a { color: #373737; }
 p { font-size: 13px; line-height: 180%; color:#464646; padding: .5em 0; }
 blockquote { font-style:italic; border-left:4px solid #A84A42; margin:10px 0 10px 0; padding-left:20px; line-height:1.8; font-size:13px; color:#999; }
 #wsite-content { min-height:500px; }
 .top-background { background: #003300; width:100%; height:300px; position:relative; min-width:960px; }
 .top-background-image { background-image: url(theme/ivy.jpg); background-position:50% 0; background-repeat:no-repeat; background-attachment: fixed; width:100%; height:300px; position:absolute; top:0; z-index:0;}
 #icontent .top-background-image { background: url(theme/clouds.jpg?777251) 50% top no-repeat; }
 .cross { width:700px; height:300px; background:url(theme/cross.png?777251) no-repeat; position:absolute; left:50%; margin-left:-350px; z-index:0; }

 #wsite-menus .wsite-menu { background:#fff; }
 #wsite-menus .wsite-menu li { border:none; }
 #wsite-menus .wsite-menu li a { border-left:none; border-right:none; }
 #wsite-menus .wsite-menu li a:hover { color: #b24d40; background:#fff ; }
 #footer-wrap { background:#000; padding:50px 0; color:#eee; float:left; }
 #footer-wrap .container {}
 #footer-wrap .container h2 { color: #fff; }
 #footer-wrap .container div.paragraph { color:#ccc; }
 #footer-wrap .container p { color:#ccc; }
 #footer-wrap a {border-bottom:none;}
 #footer-wrap blockquote {border-left-color:#666;}
 #footer-wrap .container .wsite-form-container { margin-top:0 !important; }
 #footer-wrap .container .weebly-footer, #footer-wrap .container .weebly-footer a, #weeblyfootertext {color:#fff; text-align:right;}
 #footer-wrap .container .weebly-footer, #weeblyfootertext {float:right; text-transform:uppercase; font-size:14px; font-weight:600;}
 #footer-wrap .container .wsite-form-input, #footer-wrap .container .wsite-search-element-input { border:1px #333 solid; background:#222; color:#fff; }

div.paragraph ul, div.paragraph ol { padding-left: 2.3em !important; margin: 5px 0 !important; overflow:hidden; }
div.paragraph li { padding-left: 5px !important; margin: 3px 0 0 !important; }
div.paragraph ul, div.paragraph ul li { list-style: disc outside !important; }
div.paragraph ol, div.paragraph ol li { list-style: decimal outside !important; }

